--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "scrollsnap-backend",
   "version": "1.0.0",
-  "type": "module",
+  "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5",
     "puppeteer": "^21.3.8"
+  },
+  "engines": {
+    "node": "18.18.2"
   }
 }
