--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
   "name": "scrollsnap-backend",
   "version": "1.0.0",
-  "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "puppeteer": "^21.3.8"
-  },
-  "engines": {
-    "node": "18.18.2"
   }
 }
