--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,18 @@
 services:
   - type: web
     name: scrollsnap-backend
-    runtime: bun
+    runtime: node
     repo: https://github.com/johnnyrockets3005/scrollsnap-backend
     branch: main
-    buildCommand: bun install
-    startCommand: bun run start
+    buildCommand: |
+      curl -fsSL https://bun.sh/install | bash
+      export BUN_INSTALL="$HOME/.bun"
+      export PATH="$BUN_INSTALL/bin:$PATH"
+      bun install
+    startCommand: |
+      export BUN_INSTALL="$HOME/.bun"
+      export PATH="$BUN_INSTALL/bin:$PATH"
+      bun run start
     rootDir: src
     healthCheckPath: /api/healthz
     plan: free
