--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,16 @@
 services:
   - type: web
     name: scrollsnap-backend
-    runtime: bun
+    runtime: node # Use node because Render does not yet support 'bun' as runtime
     repo: https://github.com/johnnyrockets3005/scrollsnap-backend
     branch: main
     buildCommand: |
+      curl -fsSL https://bun.sh/install | bash
+      export PATH="$HOME/.bun/bin:$PATH"
       bun install
-      rm -f bun.lockb
-    startCommand: bun run start
+    startCommand: |
+      export PATH="$HOME/.bun/bin:$PATH"
+      bun run start
     rootDir: src
     healthCheckPath: /api/healthz
     plan: free
