--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,18 @@
 services:
   - type: web
     name: scrollsnap-backend
-    runtime: bun
+    runtime: node  # ✅ must be node even if you're using Bun
     repo: https://github.com/johnnyrockets3005/scrollsnap-backend
     branch: main
     buildCommand: |
+      curl -fsSL https://bun.sh/install | bash
+      export BUN_INSTALL="$HOME/.bun"
+      export PATH="$BUN_INSTALL/bin:$PATH"
       bun install --no-cache
-    startCommand: bun run start
+    startCommand: |
+      export BUN_INSTALL="$HOME/.bun"
+      export PATH="$BUN_INSTALL/bin:$PATH"
+      bun run start
     rootDir: src
     healthCheckPath: /api/healthz
     plan: free
