--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "scrollsnap-backend",
   "version": "1.0.0",
   "scripts": {
-    "start": "node index.js"
+    "start": "bun run index.ts" // or "bun run index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "puppeteer": "^21.3.8"
+    "express": "^4.18.2"
   }
 }
